# PackageManager

./: CMakeLists.txt  Makefile  README.md
src/: main.c  main.cpp
src/cmd/: install.c  install.cpp  list.c  list.cpp  search.c  search.cpp  uninstall.c  uninstall.cpp  version.c  version.cpp
src/headers/: install.h  install.hpp  list.h  search.h  search.hpp  uninstall.h  uninstall.hpp  version.h  version.hpp
src/headers/cmd/: list.h  search.h  version.h
src/headers/utils/: install.h  uninstall.h
src/lib/: colors.h
src/utils/: install.c  uninstall.c
